--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,22 +4,37 @@ $family: "Inter var", "Inter", apple-system, BlinkMacSystemFont, "Segoe UI", Rob
 @use "vuetify" with (
   $body-font-family: $family
 );
+@import "../components//employmentForms/personalInfo//personal-info.scss";
+@import "../components//employmentForms/personalRecords/personal-records.scss";
+@import "../components//employmentForms/collaborationTerms/collaboration-terms.scss";
+@import "../components//employmentForms/uploadImage/upload-image.scss";
+@import "../components//employmentForms/relativesInfo/relatives-info.scss";
+@import "../components//employmentForms/terms/terms.scss";
+@import "../components/nurseServices/nurse-services.scss";
+@import "../components//navigation/TheNavigation.scss";
+@import "../components//support/TheChatRoom.scss";
 @font-face {
-  font-family: 'sans';
-src:url('./fonts/sans.ttf') ;
+  font-family: "sans";
+  src: url("./fonts/sans.ttf");
 }
 @font-face {
-  font-family: 'nazanin';
-src:url('./fonts/bnazanin.TTF') ;
+  font-family: "nazanin";
+  src: url("./fonts/bnazanin.TTF");
 }
 :root {
-  font-family: "sans" }
+  font-family: "sans";
+  direction: rtl !important;
+}
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: "sans","Inter var", sans-serif;
+    font-family: "sans", "Inter var", sans-serif;
   }
 }
-
+.v-messages__message {
+  hyphens: none !important;
+  text-align: right !important;
+  font-size: 0.6rem !important;
+}
 // Reset link styles
 a {
   color: inherit;
@@ -28,8 +43,18 @@ a {
 button {
   letter-spacing: 0 !important;
 }
-
-p{
+.text-error {
+  color: red;
+  font-size: 0.7rem !important;
+}
+.text{
+  font-size: 0.8rem!important
+}
+.text-title{
+  font-size: 0.9rem!important
+  
+}
+p {
   line-height: 26px;
 }
 // Override the textfield's radius
@@ -51,6 +76,15 @@ p{
   margin-bottom: 6px;
   display: inline-block;
   cursor: pointer;
+}
+.v-label {
+  word-break: keep-all !important;
+}
+.v-counter {
+  display: none !important;
+}
+.v-field__input {
+  direction: rtl !important;
 }
 // Theme gradients
 .gradient {
