--- a/components/employmentForms/terms/terms.scss
+++ b/components/employmentForms/terms/terms.scss
@@ -4,6 +4,6 @@
   .term-list {
     direction: rtl;
     font-size: 0.7rem;
-    line-height: 23px;
+    line-height: 2rem;
     font-weight: bold;
   }
