--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,15 +4,16 @@ $family: "Inter var", "Inter", apple-system, BlinkMacSystemFont, "Segoe UI", Rob
 @use "vuetify" with (
   $body-font-family: $family
 );
-@import "../components//employmentForms/personalInfo//personal-info.scss";
-@import "../components//employmentForms/personalRecords/personal-records.scss";
-@import "../components//employmentForms/collaborationTerms/collaboration-terms.scss";
-@import "../components//employmentForms/uploadImage/upload-image.scss";
-@import "../components//employmentForms/relativesInfo/relatives-info.scss";
-@import "../components//employmentForms/terms/terms.scss";
-@import "../components/nurseServices/nurse-services.scss";
-@import "../components//navigation/TheNavigation.scss";
-@import "../components//support/TheChatRoom.scss";
+@import "../components//EmploymentForms/PersonalInfo//personal-info.scss";
+@import "../components//EmploymentForms/PersonalRecords/personal-records.scss";
+@import "../components//EmploymentForms/CollaborationTerms/collaboration-terms.scss";
+@import "../components//EmploymentForms/UploadImage/upload-image.scss";
+@import "../components//EmploymentForms/RelativesInfo/relatives-info.scss";
+@import "../components//EmploymentForms/Terms/terms.scss";
+@import "../components/NurseServices/nurse-services.scss";
+@import "../components//MainNavigation/Nav.scss";
+@import "../components//Support/TheChatRoom.scss";
+
 @font-face {
   font-family: "sans";
   src: url("./fonts/sans.ttf");
@@ -35,6 +36,9 @@ $family: "Inter var", "Inter", apple-system, BlinkMacSystemFont, "Segoe UI", Rob
   text-align: right !important;
   font-size: 0.6rem !important;
 }
+.v-overlay-container{
+  text-align: center!important;
+}
 // Reset link styles
 a {
   color: inherit;
@@ -45,14 +49,19 @@ button {
 }
 .text-error {
   color: red;
-  font-size: 0.7rem !important;
+  font-size: 0.8rem !important;
 }
 .text{
   font-size: 0.8rem!important
 }
+.text-subtitle{
+  font-size: 0.7rem!important
+}
 .text-title{
   font-size: 0.9rem!important
-  
+}
+.text-detail{
+  font-size: 0.6rem!important
 }
 p {
   line-height: 26px;
