--- a/components/employmentForms/terms/terms.scss
+++ b/components/employmentForms/terms/terms.scss
@@ -3,7 +3,7 @@
   }
   .term-list {
     direction: rtl;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     line-height: 2rem;
-    font-weight: bold;
+  font-family: "sans";
   }
