--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,5 @@
-$family: "Inter var", "Inter", apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
-  Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$family:"iran-sans","sans", "traffic", "titr", "Inter var" apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", ;
 
 @use "vuetify" with (
   $body-font-family: $family
@@ -13,55 +13,86 @@ $family: "Inter var", "Inter", apple-system, BlinkMacSystemFont, "Segoe UI", Rob
 @import "../components/NurseServices/nurse-services.scss";
 @import "../components//MainNavigation/Nav.scss";
 @import "../components//Support/TheChatRoom.scss";
-
+@import "./scss/login.scss";
+.md-input {
+  font-size: 16px !important;
+}
 @font-face {
   font-family: "sans";
   src: url("./fonts/sans.ttf");
 }
 @font-face {
-  font-family: "nazanin";
-  src: url("./fonts/bnazanin.TTF");
+  font-family: "iran-sans";
+  src: url("./fonts/iranSans.ttf");
+}
+@font-face {
+  font-family: "titr";
+  src: url("./fonts/Titr.TTF");
+}
+@font-face {
+  font-family: "traffic";
+  src: url("./fonts/traffic.TTF");
 }
 :root {
-  font-family: "sans";
+  font-family:"iran-sans", "sans", "traffic", "titr";
+
   direction: rtl !important;
+}
+body{
+  font-family:"iran-sans","sans", "traffic", "titr"
+ 
 }
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: "sans", "Inter var", sans-serif;
+    font-family:"iran-sans","sans", "traffic", "titr";
+    
+    
   }
 }
 .v-messages__message {
   hyphens: none !important;
   text-align: right !important;
-  font-size: 0.6rem !important;
+  font-size: 0.5rem !important;
+ 
 }
-.v-overlay-container{
-  text-align: center!important;
+.v-overlay-container {
+  text-align: center !important;
+  font-size: 0.6rem !important;
+  font-family:"sans","iran-sans", "traffic", "titr";
+}
+.v-list-item-title{
+  font-size: 0.8rem !important;
+  font-family:"sans","iran-sans", "traffic", "titr";
 }
 // Reset link styles
 a {
   color: inherit;
   text-decoration: none;
+  font-family:"iran-sans","sans", "traffic", "titr";
 }
 button {
   letter-spacing: 0 !important;
 }
 .text-error {
   color: red;
-  font-size: 0.8rem !important;
+  font-size: 0.6rem !important;
+  font-family:"sans","iran-sans", "traffic", "titr";
 }
-.text{
-  font-size: 0.8rem!important
+.text {
+  font-size: 0.7rem !important;
+  font-family:"sans","iran-sans", "traffic", "titr";
+
 }
-.text-subtitle{
-  font-size: 0.7rem!important
+.text-subtitle {
+  font-size: 0.5rem !important;
+  font-family:"sans","iran-sans", "traffic", "titr";
 }
-.text-title{
-  font-size: 0.9rem!important
+.text-title {
+  font-size: 0.7rem !important;
+  font-family:"iran-sans","sans", "traffic", "titr";
 }
-.text-detail{
-  font-size: 0.6rem!important
+.text-detail {
+  font-size: 0.5rem !important;
 }
 p {
   line-height: 26px;
@@ -71,16 +102,19 @@ p {
   .v-field__outline__start {
     border-radius: 10px 0 0 10px !important;
   }
+
   .v-field__outline__end {
     border-radius: 0 10px 10px 0 !important;
   }
 }
 
-.v-btn {
-  font-weight: 700 !important;
+.v-field-label{
+  font-size: 0.7rem !important ;
+}
+.v-label.v-field-label--floating{
+  --v-field-label-scale: 1rem !important;
 }
 .label {
-  font-weight: 600;
   font-size: 15px;
   margin-bottom: 6px;
   display: inline-block;
@@ -89,11 +123,13 @@ p {
 .v-label {
   word-break: keep-all !important;
 }
+
 .v-counter {
   display: none !important;
 }
 .v-field__input {
   direction: rtl !important;
+  font-family: "sans","iran-sans";
 }
 // Theme gradients
 .gradient {
