--- a/components/MainNavigation/Nav.scss
+++ b/components/MainNavigation/Nav.scss
@@ -1,7 +1,7 @@
 .navigation {
   .tabs {
     letter-spacing: 0 !important;
-    height: 85px !important;
+    height: 75px !important;
   }
   .v-tabs {
     --v-tabs-height: 100% !important;
@@ -23,7 +23,8 @@
 .navigation-mobile {
   .tabs {
     letter-spacing: 0 !important;
-    height: 60px !important;
+    height: 50px !important;
+    font-size: 0.7rem!important;
   }
 
   .v-slide-group__container {
